<resources>
    <string name="app_name">Mini Stockbit</string>
    <string name="tvLogin">Masuk</string>
    <string name="tvOr">Atau</string>
    <string name="tvGoogleLogin">Masuk dengan Google</string>
    <string name="tvGoogleRegister">Daftar dengan Google</string>
    <string name="tvFacebookLogin">Masuk dengan Facebook</string>
    <string name="tvFacebookRegister">Daftar dengan Facebook</string>
    <string name="tvUsername">Username</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvForgotPassword">Lupa Password</string>
    <string name="tvForgotPasswordDesc">Masukkan alamat email Anda yang sudah terdaftar di
        Mini Stockbit untuk membuat password baru</string>
    <string name="tvHaventAccount">Belum punya akun? <font color='#228B22'>Daftar</font></string>
    <string name="tvHaveAccount">Sudah punya akun? <font color='#228B22'>Masuk</font></string>
    <string name="tvRegisterNow"> Daftar sekarang</string>
    <string name="tvLoggedInAs">Kamu telah terdaftar sebagai</string>
    <string name="tvFulname">Nama Lengkap</string>
    <string name="tvContactUs">Contact us</string>
    <string name="tvNotifications">Notifications</string>
    <string name="tvLogout">Logout</string>
    <string name="tvStockName">ADRO</string>
    <string name="tvStockFulName">Adaro Energy Tbk</string>
    <string name="tvStockPrice">1350</string>
    <string name="tvStockPriceDesc">+20 (-1.83%)</string>
    <string name="tvNoResult">Tidak ada hasil</string>
    <string name="tvResultNotLoaded">Hasil tidak dapat ditampilkan</string>

    // Button
    <string name="btnLogin">Login</string>
    <string name="btnLogout">Logout</string>
    <string name="btnRegister">Daftar</string>
    <string name="btnRegisterEmail">Daftar dengan Email</string>
    <string name="btnNext">Selanjutnya</string>
    <string name="btnRetry">Coba Lagi</string>

    // Facebook
    <string name="facebook_app_id">171026421784506</string>
    <string name="fb_login_protocol_scheme">fb171026421784506</string>

</resources>