<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginTop="1dp"
    android:focusable="true"
    android:clickable="true"
    app:cardElevation="2dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvStockName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@string/tvStockName"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvStockFulName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvStockFulName"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvStockName"
            app:layout_constraintStart_toStartOf="@id/tvStockName"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvStockPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@string/tvStockPrice"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvStockPriceDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tvStockPriceDesc"
            app:layout_constraintTop_toBottomOf="@id/tvStockPrice"
            app:layout_constraintEnd_toEndOf="@id/tvStockPrice"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>