<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.fragment.RegisterUsingEmailFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/tvEmail"
            android:inputType="textEmailAddress"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFulname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <EditText
            android:id="@+id/etFulname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Fulname"
            android:hint="@string/tvFulname"
            android:inputType="text"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilFulname">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Username"
            android:hint="@string/tvUsername"
            android:inputType="text"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:layout_constraintTop_toBottomOf="@id/tilUsername">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/tvPassword"
            android:inputType="textPassword"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@color/colorGreenForest"
        style="?android:attr/borderlessButtonStyle"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>