<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:background="@drawable/background_stroke_black"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/google_icon"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGoogleLogin"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgGoogle"
            app:layout_constraintBottom_toBottomOf="@id/imgGoogle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:background="@drawable/background_stroke_black"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/llGoogleLogin">

        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_facebook_logo"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvFacebookLogin"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgFacebook"
            app:layout_constraintBottom_toBottomOf="@id/imgFacebook"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llAnotherLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llFacebookLogin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrey"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvOr"
            android:textColor="@color/black"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/colorGrey"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="Email"
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/llAnotherLogin"
        app:layout_constraintStart_toStartOf="@id/llFacebookLogin"
        app:layout_constraintEnd_toEndOf="@id/llFacebookLogin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:layout_constraintTop_toBottomOf="@id/etEmail">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:hint="@string/tvPassword"
            android:inputType="textPassword"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvForgotPassword"
        android:textColor="@color/teal_200"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_corner"
        style="?android:attr/borderlessButtonStyle"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"/>

    <TextView
        android:id="@+id/tvLoginNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="2"
        android:layout_marginHorizontal="20dp"
        android:padding="5dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginStart="3dp"
        android:text="@string/tvHaventAccount"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>